# asr-grpc

./: .gitattributes  Dockerfile
asr/: README.md  pyproject.toml  pytest.ini  server.py
asr/pb/asr/: __init__.py
asr/tests/: server_test.py
pb/asr/: asr.proto
